      helps encode characters not allowed in the current configuration
      file format, such as newline or #.  Addresses bug 557.
    - Although we fixed bug 539 (where servers would send HTTP status 503
      responses _and_ send a body too), there are still servers out there
      that haven't upgraded.  Therefore, make clients parse such bodies
      when they receive them.

  o Minor performance improvements:
    - Reference-count and share copies of address policy entries; only
      5% of them were actually distinct.
    - Never walk through the list of logs if we know that no log is
      interested in a given message.

  o Minor bugfixes:
    - When an authority has not signed a consensus, do not try to
      download a nonexistent "certificate with key 00000000".  Bugfix
      on 0.2.0.x. Fixes bug 569.
    - Use a mutex to protect the list of logs, so we never write to
      the list as it's being freed.  Bugfix on 0.1.2.x.  Fixes the
      very rare bug 575, which is kind of the revenge of bug 222.
    - Patch from Karsten Loesing to complain less at both the client
      and the relay when a relay used to have the HSDir flag but doesn't
      anymore, and we try to upload a hidden service descriptor.
    - Stop leaking one cert per TLS context.  Fixes bug 582.  Bugfix
      on 0.2.0.15-alpha.
    - Do not try to download missing certificates until we have tried
      to check our fallback consensus.  Fixes bug 583.
    - Make bridges round geoip info up, not down.

  o Minor features (controller):
    - Get NS events working again.  (Patch from tup)
    - The GETCONF command now escapes and quotes configuration values
      that don't otherwise fit into the torrc file.
    - The SETCONF command now handles quoted values correctly.

  o Minor features (directory authorities):
    - New configuration options to override default maximum number of
      servers allowed on a single IP address.  This is important